Resolved Authentication issue